fixed gap between title and show page

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
                 
   /* LANDING PAGE */
 
+
 .LandingPage {
   background-color: #D4C6AC;
   height: 100vh;
@@ -123,7 +124,6 @@
     display: flex;
     flex-direction: row;
     margin-left: 5%;
-    margin-top: 5%;
   }
 
   .cafe-photo{
